--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,10 +7,19 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
   datasource:
-    url: jdbc:mysql://localhost:3306/student-api
+    url: jdbc:mysql://localhost:3306/student_api
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    schemas: student_api
+    user: root
+    password: root
+    baseline-on-migrate: true
+    validateOnMigrate: false
 
 server:
   port: 8585
